--- a/wp-content/themes/gabriela/assets/sass/style.scss
+++ b/wp-content/themes/gabriela/assets/sass/style.scss
@@ -579,6 +579,10 @@ footer {
 			justify-content: space-between;
 			padding: 0 15px;
 		}
+		.botao-whatsapp {
+			bottom: 45px;
+			right: 20px;
+		}
 	}
 	@media only screen and (max-width: 600px) {
 		margin: 50px 0 10px 0;
@@ -724,6 +728,8 @@ footer {
 			}
 		}
 	}
+	@media only screen and (max-width: 1900px) {
+	}
 	@media only screen and (max-width: 1265px) {
 		margin: 8% 4%;
 		align-items: flex-start;
@@ -856,11 +862,25 @@ footer {
 				}
 			}
 		}
+		@media only screen and (max-width: 2560px) {
+			.box {
+				.foto {
+					img {
+						width: 100%;
+					}
+				}
+			}
+		}
 		@media only screen and (max-width: 1200px) {
 			.box {
 				width: 45%;
 				&:nth-child(3) {
 					display: none;
+				}
+				.foto {
+					img {
+						width: fit-content;
+					}
 				}
 			}
 		}
@@ -918,7 +938,19 @@ footer {
 						width: 100%;
 						height: 100%;
 					}
+					@media only screen and (max-width: 2560px) {
+						.foto-banner {
+							img {
+								width: 100%;
+							}
+						}
+					}
 					@media only screen and (max-width: 1265px) {
+						.foto-banner {
+							img {
+								width: fit-content;
+							}
+						}
 						.box-descritivo {
 							margin-left: 50px;
 							h2 {
@@ -956,12 +988,24 @@ footer {
 						.box-descritivo {
 							margin-left: 15px;
 							h2 {
-								font-size: 32px;
+								font-size: 28px;
 							}
 							.botao {
-								padding: 8px 15px;
+								padding: 5px 7px;
 								p {
-									font-size: 16px;
+									font-size: 14px;
+								}
+							}
+						}
+					}
+					@media only screen and (max-width: 340px) {
+						.box-descritivo {
+							h2 {
+								font-size: 24px;
+							}
+							.botao {
+								p {
+									font-size: 12px;
 								}
 							}
 						}
@@ -1348,6 +1392,18 @@ footer {
 			}
 		}
 	}
+	@media only screen and (max-width: 600px) {
+		section {
+			.card {
+				.box {
+					width: 90%;
+					transform: translateX(50%);
+					right: 50%;
+					margin: 0 0 20px 0;
+				}
+			}
+		}
+	}
 }
 .interna-blog {
 	margin: 0 8%;
@@ -1525,16 +1581,43 @@ footer {
 			.data {
 				padding-top: 25px;
 			}
-			.desktop {
-				display: none;
-			}
-			.desabilitado {
-				display: flex;
-				align-items: center;
-				span {
-					margin-top: 10px;
-					a {
-						margin-left: 10px;
+			.social {
+				.compartilhe {
+					b {
+						display: none;
+					}
+					&:hover {
+						padding: 25px 0 0px 0;
+						transform: translateX(0);
+						.logo-share {
+							display: none;
+						}
+						span {
+							position: relative;
+							transform: translateX(0);
+							svg {
+								margin-right: 10px;
+							}
+						}
+					}
+				}
+				@media only screen and (max-width: 400px) {
+					flex-direction: column;
+					align-items: flex-start;
+					.compartilhe {
+						padding: 10px 0 5px 0;
+						align-items: flex-start;
+						b {
+							display: block;
+							margin-right: 10px;
+						}
+						.logo-share {
+							display: none;
+						}
+						span {
+							position: relative;
+							transform: translateX(0);
+						}
 					}
 				}
 			}
@@ -1547,7 +1630,10 @@ footer {
 			}
 			.tags {
 				div {
-					justify-content: space-evenly;
+					justify-content: flex-start;
+					a {
+						margin: 5px 15px 5px 0;
+					}
 				}
 			}
 			.post-recentes {
