--- a/wp-content/themes/gabriela/assets/sass/style.scss
+++ b/wp-content/themes/gabriela/assets/sass/style.scss
@@ -1420,7 +1420,7 @@ footer {
 		.social {
 			display: flex;
 			justify-content: space-between;
-			align-items: center;
+			align-items: baseline;
 			overflow: hidden;
 			p {
 				svg {
