--- a/wp-content/themes/gabriela/assets/sass/style.scss
+++ b/wp-content/themes/gabriela/assets/sass/style.scss
@@ -233,7 +233,10 @@ main {
 		.navigation {
 			display: none;
 		}
-		@media only screen and (max-width: 900px) {
+	}
+	@media only screen and (max-width: 900px) {
+		box-shadow: 0px 1px 0px #a3a3a336;
+		.agrupador {
 			justify-content: space-between;
 			width: 100%;
 			.menu {
