alteração de semantica

--- a/wp-content/themes/gabriela/assets/sass/style.scss
+++ b/wp-content/themes/gabriela/assets/sass/style.scss
@@ -1042,6 +1042,10 @@ footer {
 				justify-content: center;
 				width: 100%;
 				padding: 40px 70px 40px 150px;
+				h2 {
+					color: $rosa-escuro;
+					font-size: 24px;
+				}
 				h3 {
 					margin: 20px 0 25px 0;
 				}
