--- a/wp-content/themes/gabriela/assets/sass/style.scss
+++ b/wp-content/themes/gabriela/assets/sass/style.scss
@@ -394,6 +394,8 @@ footer {
 		margin-bottom: 50px;
 		h4 {
 			font-family: "Lora", serif;
+			font-weight: 400;
+			font-size: 32px;
 		}
 		.logo {
 			margin: 0 70px 0 100px;
@@ -690,6 +692,8 @@ footer {
 		width: 50%;
 		h2 {
 			font-family: "Lora", serif;
+			font-weight: 500;
+			font-size: 80px;
 		}
 		h3 {
 			margin: 5px 0 35px 0;
@@ -1199,6 +1203,8 @@ footer {
 				h2 {
 					margin-bottom: 40px;
 					font-family: "Lora", serif;
+					font-weight: 500;
+					font-size: 80px;
 				}
 				.beneficios {
 					margin-top: 60px;
@@ -1539,14 +1545,10 @@ footer {
 					margin-bottom: 12px;
 				}
 				@media only screen and (max-width: 1265px) {
-					p {
-						font-size: 18px;
-					}
+					font-size: 18px;
 				}
-				@media only screen and (max-width: 1265px) {
-					p {
-						font-size: 16px;
-					}
+				@media only screen and (max-width: 600px) {
+					font-size: 16px;
 				}
 			}
 		}
